--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,20 +1,51 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_auth.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
+
+{% block page_class %}register-page{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+<div class="d-flex justify-center">
+    <div class="auth-card">
+        <div class="card-header">
+            <h1 class="card-title">📝 Inscription</h1>
+            <p>Créez votre compte</p>
+        </div>
 
-    {{ form_errors(registrationForm) }}
+        <div class="card-body">
+            {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm, {'attr': {'data-turbo': 'false'}}) }}
-    {{ form_row(registrationForm._token) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+            {{ form_start(registrationForm, {'attr': {'data-turbo': 'false'}}) }}
+            <div class="form-group">
+                {{ form_label(registrationForm.email, 'Email', {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control', 'placeholder':
+                'votre@email.com'}}) }}
+                {{ form_errors(registrationForm.email) }}
+            </div>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+            <div class="form-group">
+                {{ form_label(registrationForm.plainPassword, 'Mot de passe', {'label_attr': {'class': 'form-label'}})
+                }}
+                {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-control', 'placeholder': 'Votre
+                mot de passe'}}) }}
+                {{ form_errors(registrationForm.plainPassword) }}
+            </div>
+
+            <div class="form-check">
+                {{ form_widget(registrationForm.agreeTerms, {'attr': {'class': 'form-check-input'}}) }}
+                {{ form_label(registrationForm.agreeTerms, 'J\'accepte les conditions d\'utilisation', {'label_attr':
+                {'class': 'form-label'}}) }}
+                {{ form_errors(registrationForm.agreeTerms) }}
+            </div>
+
+            <button type="submit" class="btn btn-primary w-100">S'inscrire</button>
+            {{ form_end(registrationForm) }}
+        </div>
+
+        <div class="card-body text-center" style="border-top: 1px solid var(--border-color);">
+            <p class="text-secondary">Déjà un compte ?</p>
+            <a href="{{ path('app_login') }}" class="btn btn-outline">Se connecter</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
