--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,4 +1,5 @@
-<form method="post" action="{{ path('app_user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_user_delete', {'id': user.id}) }}"
+    onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet utilisateur ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger btn-sm">🗑️ Supprimer</button>
 </form>
