--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,25 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="form-group">
+    {{ form_label(form.email, 'Email', {'label_attr': {'class': 'form-label'}}) }}
+    {{ form_widget(form.email, {'attr': {'class': 'form-control', 'placeholder': 'utilisateur@example.com'}}) }}
+    {{ form_errors(form.email) }}
+</div>
+
+{% if form.plainPassword is defined %}
+<div class="form-group">
+    {{ form_label(form.plainPassword, 'Mot de passe', {'label_attr': {'class': 'form-label'}}) }}
+    {{ form_widget(form.plainPassword, {'attr': {'class': 'form-control', 'placeholder': 'Mot de passe'}}) }}
+    {{ form_errors(form.plainPassword) }}
+</div>
+{% endif %}
+
+{% if form.roles is defined %}
+<div class="form-group">
+    {{ form_label(form.roles, 'Rôles', {'label_attr': {'class': 'form-label'}}) }}
+    {{ form_widget(form.roles, {'attr': {'class': 'form-control'}}) }}
+    {{ form_errors(form.roles) }}
+</div>
+{% endif %}
+
+<button type="submit" class="btn btn-primary">{{ button_label|default('Sauvegarder') }}</button>
 {{ form_end(form) }}
