--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,39 +1,54 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Gestion des utilisateurs{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+<div class="actions-bar">
+    <h1>👥 Gestion des utilisateurs</h1>
+    <a href="{{ path('app_user_new') }}" class="btn btn-primary">
+        ➕ Nouvel utilisateur
+    </a>
+</div>
 
+<div class="table-container">
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <th>Email</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>actions</th>
+                <th>Rôles</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-        {% for user in users %}
+            {% for user in users %}
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
                 <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+                    {% for role in user.roles %}
+                    <span class="badge">{{ role }}</span>
+                    {% endfor %}
+                </td>
+                <td>
+                    <div class="d-flex gap-2">
+                        <a href="{{ path('app_user_show', {'id': user.id}) }}" class="btn btn-outline btn-sm">
+                            👁️ Voir
+                        </a>
+                        <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-secondary btn-sm">
+                            ✏️ Modifier
+                        </a>
+                    </div>
                 </td>
             </tr>
-        {% else %}
+            {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="4" class="text-center">
+                    <p class="text-secondary">Aucun utilisateur trouvé</p>
+                </td>
             </tr>
-        {% endfor %}
+            {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_user_new') }}">Create new</a>
+</div>
 {% endblock %}
