--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,11 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}Nouvel utilisateur{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
+<div class="d-flex justify-between align-center mb-4">
+    <h1>➕ Créer un utilisateur</h1>
+    <a href="{{ path('app_user_index') }}" class="btn btn-outline">← Retour à la liste</a>
+</div>
 
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('app_user_index') }}">back to list</a>
+<div class="card">
+    <div class="card-header">
+        <h2 class="card-title">Informations utilisateur</h2>
+    </div>
+    <div class="card-body">
+        {{ include('user/_form.html.twig', {'button_label': 'Créer'}) }}
+    </div>
+</div>
 {% endblock %}
