--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,6 +6,13 @@
 <div class="welcome-hero">
     <h1>🚀 Bienvenue sur Mon App</h1>
     <p class="text-secondary">Une application Symfony moderne et professionnelle</p>
+
+    <p class="text-secondary">Une application Symfony moderne et professionnelle</p>
+
+    <p class="text-secondary">Une application Symfony moderne et professionnelle</p>
+
+    <p class="text-secondary">Une application Symfony moderne et professionnelle</p>
+
 </div>
 
 <div class="welcome-features">
